[tool.poetry]
name = "av_baselines"
version = "0.1.0"
description = "A simple library and model zoo for reinforcement learning and autonomous driving"
authors = ["fahmyadan <fahmy.adan14@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.1"
gymnasium = ">=0.28.1,<0.30"
numpy = ">=1.20"
cloudpickle = "^3.0.0"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
highway-env = "^1.8.2"
pyyaml = "^6.0.1"
wandb = "^0.16.3"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
